[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/user interface/backgrounds/Background.png" type="Texture" id=1]
[ext_resource path="res://src/screens/LoadingScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/user interface/themes/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/user interface/themes/secondary_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/user interface/themes/CherryBombOne-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 5 )

[node name="LoadingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="AppTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.206771
anchor_right = 0.5
anchor_bottom = 0.206771
margin_left = -394.0
margin_top = -145.0
margin_right = 394.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 1 )
text = "BubBlow"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScreenTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.30026
anchor_right = 0.5
anchor_bottom = 0.30026
margin_left = -321.0
margin_top = -72.5
margin_right = 321.0
margin_bottom = 72.5
custom_fonts/font = SubResource( 2 )
text = "Caricamento"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Text1" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.522135
anchor_right = 0.5
anchor_bottom = 0.522135
margin_left = -271.0
margin_top = -29.5
margin_right = 271.0
margin_bottom = 29.5
custom_fonts/font = ExtResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Text2" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.54974
anchor_right = 0.5
anchor_bottom = 0.54974
margin_left = -305.0
margin_top = -29.5
margin_right = 305.0
margin_bottom = 29.5
custom_fonts/font = ExtResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Text3" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.576823
anchor_right = 0.5
anchor_bottom = 0.576823
margin_left = -278.5
margin_top = -29.5
margin_right = 278.5
margin_bottom = 29.5
custom_fonts/font = ExtResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LoadingBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -121.0
margin_right = 300.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
